openshift/templates/envoy/envoy-dc-working.yaml
apiVersion: template.openshift.io/v1
kind: Template
metadata:
  creationTimestamp: null
  name: envoy
parameters:
  - name: ENV_NAME
    displayName: Environment Name
    description: Environment Name
    required: true
  - name: CPU_REQUEST
    displayName: Requested CPU
    description: Requested CPU
    required: true
  - name: CPU_LIMIT
    displayName: CPU upper limit
    description: CPU upper limit
    required: true
  - name: MEMORY_REQUEST
    displayName: Requested memory
    description: Requested memory
    required: true
  - name: MEMORY_LIMIT
    displayName: Memory upper limit
    description: Memory upper limit
    required: true
objects:
- apiVersion: v1
  kind: Service
  metadata:
    name: envoy
    labels:
      name: envoy
      app: zeva
      role: envoy
      env: ${ENV_NAME}
  spec:
    ports:
    - name: http-in
      port: 10000
      targetPort: 10000
    - name: admin
      port: 9901
      targetPort: 9901
    - name: keycloak-in
      port: 8888
      targetPort: 8888
    selector:
      name: envoy
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  metadata:
    name: envoy
    labels:
      name: envoy
      app: zeva
      role: envoy
      env: ${ENV_NAME}
    annotations:
      description: Defines how to deploy the envoy proxy
    creationTimestamp: null
  spec:
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      name: envoy
    strategy:
      activeDeadlineSeconds: 21600
      recreateParams:
        timeoutSeconds: 600
      resources:
        limits:
          cpu: ${CPU_LIMIT}
          memory: ${MEMORY_LIMIT}
        requests:
          cpu: ${CPU_REQUEST}
          memory: ${MEMORY_REQUEST}
      type: Recreate
    template:
      metadata:
        creationTimestamp: null
        labels:
          name: envoy
        name: envoy
      spec:
        containers:
        - env: {}
          image:
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 40
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 10000
            timeoutSeconds: 3
          name: envoy
          ports:
          - name: admin
            containerPort: 9901
          - name: http-in
            containerPort: 10000
          - name: keycloak-in
            containerPort: 8888
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 10000
            timeoutSeconds: 3
          resources:
            limits:
              cpu: 300m
              memory: 500M
            requests:
              cpu: 100m
              memory: 200M
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
        volumes:
    test: false
    triggers:
    - imageChangeParams:
        automatic: true
        containerNames:
        - envoy
        from:
          kind: ImageStreamTag
          name: envoy:${ENV_NAME}
          namespace: tbiwaq-tools
        lastTriggeredImage:
      type: ImageChange
    - type: ConfigChange
  status:
    availableReplicas: 0
    latestVersion: 0
    observedGeneration: 0
    replicas: 0
    unavailableReplicas: 0
    updatedReplicas: 0
