openshift/templates/envoy/envoy-old.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }

static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address: { address: 0.0.0.0, port_value: 10000 }
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
                stat_prefix: ingress_http
                codec_type: AUTO
                upgrade_configs:
                  - upgrade_type: "websocket"
                    enabled: true
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: ["*"]
                      routes:
                        - match: { prefix: "/grpc/" }
                          route:
                            prefix_rewrite: "/"
                            cluster: python_transaction_service
                            max_grpc_timeout: 0s
                        - match: { prefix: "/sockjs-node/" }
                          route:
                            cluster: frontend
                        - match: { prefix: "/" }
                          route: { cluster: frontend }
                http_filters:
                - name: envoy.grpc_web
                - name: envoy.router
  clusters:
    - name: frontend
      connect_timeout: 0.25s
      type: LOGICAL_DNS
      lb_policy: ROUND_ROBIN
      hosts:
      - socket_address:
          address: frontend.tbiwaq-dev.svc.cluster.local
          port_value: 5001
    - name: python_transaction_service
      connect_timeout: 0.25s
      type: LOGICAL_DNS
      lb_policy: ROUND_ROBIN
      http2_protocol_options: {}
      upstream_connection_options:
        tcp_keepalive:
          keepalive_time: 300
      hosts:
        - socket_address:
            address: python-backend.tbiwaq-dev.svc.cluster.local
            port_value: 10102
